--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "yahoo-stock-prices": "^1.1.0"
+  },
+  "engines": {
+    "node": "14.3.0"
   }
 }
