--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "heroku-postbuild": "npm && npm build && node server/server.js",
+    "heroku-postbuild": "npm install && npm build && node server/server.js",
     "start": "snowpack dev",
     "build": "snowpack build",
     "server": "node server/server.js"
