--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "scripts": {
     "heroku-postbuild": "npm install && npm build",
-    "start": "snowpack dev",
-    "build": "snowpack build",
-    "server": "node server/server.js"
+    "start-client": "snowpack dev",
+    "build": "snowpack build && (cd server && npm install)",
+    "start": "node server/server.js"
   },
   "devDependencies": {
     "@snowpack/plugin-webpack": "^2.3.1",
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "http-proxy-middleware": "^2.0.0",
+    "nodemon": "^2.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "yahoo-stock-prices": "^1.1.0"
