--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "heroku-postbuild": "npm install && npm build",
+    "heroku-postbuild": "npm install && snowpack build && (cd server && npm install)",
     "start-client": "snowpack dev",
     "build": "snowpack build && (cd server && npm install)",
     "start": "node server/server.js"
